--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
         <!-- Quiz Screen -->
         <div id="quiz-screen" class="screen">
             <div class="quiz-header">
+                <button id="quit-quiz-btn" class="btn-back">✕ Quit</button>
                 <div class="progress-info">
                     <span id="question-counter">Question 1 of 10</span>
                     <span id="topic-badge" class="topic-badge">Topic</span>
